Adds routes and updates swagger
